syntax = "proto3";

package api.redis.v1;

option go_package="github.com/qthuy2k1/thesis_management_backend/redis/api/v1";

service RedisService {
  rpc SetUser(SetUserRequest) returns (SetUserResponse) {} 
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {} 
}

message CommonRedisResponse {
    int64 statusCode = 1;
    string message = 2;
}


message SetUserRequest {
    User user = 1;
}

message SetUserResponse {
    CommonRedisResponse response = 1;
}

message User {
    string id = 1;
    optional string class = 2;
    optional string major = 3;
    optional string phone = 4;
    string photoSrc = 5;
    string role = 6;
    string name = 7;
    string email = 8;
    optional string hashedPassword = 9;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    CommonRedisResponse response = 1;
    User user = 2;
}

